(fixed) stars doubling every light/dark toggle - optimized star amount based on screen size - slowed star flicker - added animation to UI clicks - fixed github logo so its always at bottom of each column

--- a/css.css
+++ b/css.css
@@ -10,7 +10,7 @@
     background-color: #d0ceba;
 }
 section{
-    min-height:25vh;
+    min-height:20vh;
 }
 #pageWrap.dark{
     background-color: hsla(219, 57%, 20%, 0.781);
@@ -55,6 +55,14 @@ section{
 #navUIDark:hover{
     cursor:pointer;
 }
+@keyframes icon-in {
+        0%   { opacity: 0; transform: scale(0.8) rotate(-10deg); }
+        60%  { opacity: 1; transform: scale(1.1) rotate(6deg); }
+        100% { opacity: 1; transform: scale(1) rotate(0); }
+}
+.icon-animate {
+    animation: icon-in 250ms ease-out;
+}
 #dropdownContent{
     display: none;
     flex-direction: column;
@@ -80,7 +88,6 @@ section{
 }
 
 #dropdownContent.dark{
-    /*background-color: hsla(242, 78%, 50%, 1.0);*/
     background-color: hsla(229, 70%, 21%, 0.993);
 }
 
@@ -98,7 +105,6 @@ section{
     justify-content: space-evenly;
     align-items: center;
     margin:auto;
-    padding:5px;
 
 }
 #aboutContent{
@@ -127,8 +133,7 @@ section{
     display:flex;
     flex-wrap:wrap;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    justify-content: center;
 }
 .projectPreview{
     height:250px;
@@ -157,8 +162,7 @@ img {
     flex-direction: column;
     flex-wrap:wrap;
     flex:20%;
-    justify-content: space-between;
-    height:100%;
+    align-items: center;
 }
 figcaption{
     display:flex;
@@ -169,7 +173,6 @@ figcaption{
     display:flex;
     flex-wrap:wrap;
     margin-top:auto;
-    padding:5px;
 }
 #resume {
     display:flex;
@@ -185,17 +188,6 @@ figcaption{
 
 
 /*Page Wide Styles*/
-h1{
-    font-size: 1.5em;
-    padding-left:5px;
-}
-#aboutContent h2{
-    font-size:1.25em;
-    padding-left:0px;
-    font-weight: normal;
-    text-decoration: underline;
-    font-family:monospace;
-}
 /*Background Styles and Animations*/
 a{
     text-decoration: none;
@@ -214,7 +206,9 @@ hr.dark{
     background-color: white;
     box-shadow: 1px 3px 3px #888888;
 }
-
+h1{
+    margin-top:50px;
+}
 body{
     height:100%;
    /* background: url('imgs/BG-sky-compressed.jpg');
@@ -228,7 +222,7 @@ body{
 }
 body.dark{
     color:white;
-    background: linear-gradient(to bottom, #04142A, #0F1F3D); 
+    background: linear-gradient(to bottom, #01060c, #0b162c); 
 }
 .cloud{
     position:absolute;
